--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,36 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".StartActivity"
+    android:background="@drawable/back"
     android:gravity="center"
-    android:background="#fff">
+    android:orientation="vertical"
+
+    tools:context=".StartActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rabta"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
         android:textSize="25sp"
-        android:textStyle="bold"
-         />
+        android:textStyle="bold" />
+
     <Button
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:text="login"
-        android:background="@color/colorPrimary"
-        android:textColor="#fff"
-        android:id="@+id/login"
-        />
+        android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+
     <Button
+        android:id="@+id/register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/colorPrimary"
-        android:textColor="#fff"
+        android:background="@color/common_google_signin_btn_text_dark_default"
         android:text="register"
-        android:id="@+id/register"
-        />
+        android:textColor="@color/common_google_signin_btn_text_dark_focused" />
 
 </LinearLayout>
