--- a/app/src/main/res/layout/bar_layout.xml
+++ b/app/src/main/res/layout/bar_layout.xml
@@ -5,7 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     app:titleTextColor="#fff"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:popupTheme="@style/MenuStyle"
+
+
+    >
 
 
 </android.support.v7.widget.Toolbar>
