--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/user"
     tools:context=".MessageActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.v7.widget.Toolbar
@@ -28,9 +30,40 @@
                 android:layout_marginLeft="25dp"
                 android:textColor="#fff"
                 android:textStyle="bold"
-                android:layout_marginStart="25dp"/>
+                android:layout_marginStart="25dp"
 
+                />
         </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.AppBarLayout>
 
-</RelativeLayout>
+    </android.support.design.widget.AppBarLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_view"
+        android:layout_below="@+id/bar_layout"
+        android:layout_above="@+id/bottom"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:id="@+id/bottom"
+        android:background="#fff"
+        android:layout_alignParentBottom="true">
+
+       <EditText
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:id="@+id/text_send"
+           android:background="@android:color/transparent"
+           android:hint="Type a message"
+           android:layout_centerVertical="true"/>
+
+<ImageButton
+    android:layout_width="40dp"
+    android:layout_height="40dp"
+    android:id="@+id/btn_send"
+    android:background="@drawable/ic_action_name"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentRight="true"/>
+    </RelativeLayout>
+    </RelativeLayout>
