--- a/app/src/main/res/layout/chat_item_eft.xml
+++ b/app/src/main/res/layout/chat_item_eft.xml
@@ -28,12 +28,21 @@
             android:layout_height="wrap_content"
             android:background="@drawable/background_left"
             android:text="hello"
-android:layout_toRightOf="@id/profile_image"
+            android:layout_toRightOf="@id/profile_image"
             android:id="@+id/show_message"
             android:textSize="18sp"
             android:textColor="#000000"
             android:padding="5dp"
-            />
+           />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_seen"
+            android:visibility="gone"
+
+            android:layout_below="@id/show_message"/>
     </RelativeLayout>
+
 
 </RelativeLayout>
