--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="1.5dp"
+    android:padding="5dp"
     android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="300dp"
@@ -28,6 +28,15 @@
             android:textColor="#000000"
             android:padding="5dp"
             android:layout_alignParentRight="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_seen"
+
+            android:layout_below="@id/show_message"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
 </RelativeLayout>
