notification package created

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -41,8 +41,7 @@
             android:gravity="center"
             android:layout_marginTop="15dp"
             android:textColor="#000"
-            android:text="By clicking RESET,
-             you will receive an email to reset you password"/>
+            android:text="By clicking RESET,you will receive an email to reset you password"/>
 
     </LinearLayout>
 
